[CDPx] update symbols path

--- a/.pipelines/pipeline.user.windows.yml
+++ b/.pipelines/pipeline.user.windows.yml
@@ -132,7 +132,8 @@ build:
       artifacts:
         - to: 'x64 Symbols'
           include:
-            - 'x64/**/*.pdb'
+            - 'x64/*/*.pdb'
+            - 'x64/*/*/*.pdb'
 
 package:
   commands:
